--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "php-demon",
+  "name": "php-demo",
   "version": "1.0.0",
-  "description": "",
+  "description": "demo",
   "main": "index.js",
   "dependencies": {
     "vue": "^1.0.21",
@@ -13,30 +13,34 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
+    "babel-runtime": "^6.6.1",
     "css-loader": "^0.23.1",
     "gulp": "^3.9.1",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
+    "merge-stream": "^1.0.0",
+    "vinyl-named": "^1.1.0",
     "vue-hot-reload-api": "^1.3.2",
     "vue-html-loader": "^1.2.2",
     "vue-loader": "^8.2.3",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-stream": "^3.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --inline --hot --quiet",
-    "build": "webpack -p"
+    "dev": "webpack-dev-server --inline --hot --quiet --config src/conf/webpack.dev.config.js",
+    "build": "gulp build --config src/conf/webpack.prod.config.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Maxcins/php-demon.git"
+    "url": "git+https://github.com/Maxcins/demo.git"
   },
   "author": "mxcins",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Maxcins/php-demon/issues"
+    "url": "https://github.com/Maxcins/demo/issues"
   },
-  "homepage": "https://github.com/Maxcins/php-demon#readme"
+  "homepage": "https://github.com/Maxcins/demo#readme"
 }
