--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "demo",
   "main": "index.js",
   "dependencies": {
+    "bootstrap": "^3.3.6",
+    "echarts": "^3.1.9",
     "vue": "^1.0.21",
     "vue-resource": "^0.7.0",
     "vue-validator": "^2.0.2"
