--- a/.env.default
+++ b/.env.default
@@ -9,3 +9,7 @@ MASTER_DATABASE_SERVER = 127.0.0.1
 MASTER_DATABASE_USERNAME = your_name
 MASTER_DATABASE_PASSWORD = your_password
 MASTER_DATABASE_CHARSET = utf8
+
+#password crypt salt
+
+PASSWORD_SALT = salt
