--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "slim/slim": "^3.3",
         "slim/php-view": "^2.1",
         "vlucas/phpdotenv": "^2.2",
-        "catfan/Medoo": "^1.0"
+        "catfan/Medoo": "^1.0",
+        "predis/predis": "^1.0"
     },
     "autoload": {
         "psr-4": {
